--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,9 @@ tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.2.0
+jax==0.4.16
+jaxlib==0.4.38
+
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
