--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ libclang==18.1.1
 Markdown==3.10
 MarkupSafe==3.0.3
 ml_dtypes==0.5.3
-numpy==1.23.5
+numpy>=1.24,<1.26
 oauthlib==3.3.1
 opt_einsum==3.4.0
 packaging==25.0
@@ -40,8 +40,8 @@ tensorflow==2.12.0
 tensorflow-estimator==2.12.0
 tensorflow-io-gcs-filesystem==0.37.1
 termcolor==3.2.0
-jax==0.4.16
-jaxlib==0.1.69
+jax==0.4.38
+jaxlib==0.4.38
 
 typing_extensions==4.15.0
 urllib3==2.5.0
