--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,43 @@
-absl-py==2.3.1
+# Django
+Django==5.2.8
 asgiref==3.10.0
-astunparse==1.6.3
+sqlparse==0.5.3
+
+# TensorFlow + Keras
+tensorflow==2.12.0
+tensorflow-estimator==2.12.0
+tensorflow-io-gcs-filesystem==0.37.1
+keras==2.12.0
+h5py==3.15.1
+numpy>=1.24,<1.26
+opt_einsum==3.4.0
+ml_dtypes==0.5.3
+gast==0.4.0
+protobuf==4.25.8
+tensorboard==2.12.3
+tensorboard-data-server==0.7.2
+termcolor==3.2.0
+
+# JAX
+jax==0.4.38
+jaxlib==0.4.38
+
+# Supporting libraries
+absl-py==2.3.1
 cachetools==6.2.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
-Django==5.2.8
-flatbuffers==25.9.23
-gast==0.4.0
-git-filter-repo==2.47.0
 google-auth==2.43.0
 google-auth-oauthlib==1.0.0
 google-pasta==0.2.0
 grpcio==1.76.0
-h5py==3.15.1
 idna==3.11
-
-keras==2.12.0
 libclang==18.1.1
 Markdown==3.10
 MarkupSafe==3.0.3
-ml_dtypes==0.5.3
-numpy>=1.24,<1.26
 oauthlib==3.3.1
-opt_einsum==3.4.0
 packaging==25.0
 pillow==12.0.0
-protobuf==4.25.8
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 requests==2.32.5
@@ -33,17 +45,11 @@ requests-oauthlib==2.0.0
 rsa==4.9.1
 scipy==1.15.3
 six==1.17.0
-sqlparse==0.5.3
-tensorboard==2.12.3
-tensorboard-data-server==0.7.2
-tensorflow==2.12.0
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.37.1
-termcolor==3.2.0
-jax==0.4.38
-jaxlib==0.4.38
-
 typing_extensions==4.15.0
 urllib3==2.5.0
 Werkzeug==3.1.3
 wrapt==1.14.2
+
+# Optional: git utilities
+git-filter-repo==2.47.0
+flatbuffers==25.9.23
