--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 absl-py==2.3.1
-setuptools==80.9.0
+setuptools>=68.0.0
+wheel>=0.40.0
 asgiref==3.10.0
 astunparse==1.6.3
 cachetools==6.2.2
@@ -15,7 +16,7 @@ google-pasta==0.2.0
 grpcio==1.76.0
 h5py==3.15.1
 idna==3.11
-jax==0.4.30
+jax==0.4.34
 jaxlib==0.4.34
 keras==2.12.0
 libclang==18.1.1
