--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 absl-py==2.3.1
 setuptools>=68.0.0
 wheel>=0.40.0
+pip>=23.0
 asgiref==3.10.0
 astunparse==1.6.3
 cachetools==6.2.2
@@ -23,7 +24,7 @@ libclang==18.1.1
 Markdown==3.10
 MarkupSafe==3.0.3
 ml_dtypes==0.5.3
-numpy==1.23.5
+numpy==1.24.6
 oauthlib==3.3.1
 opt_einsum==3.4.0
 packaging==25.0
@@ -34,7 +35,7 @@ pyasn1_modules==0.4.2
 requests==2.32.5
 requests-oauthlib==2.0.0
 rsa==4.9.1
-scipy==1.15.3
+scipy==1.11.2
 six==1.17.0
 sqlparse==0.5.3
 tensorboard==2.12.3
